refactor: little changes toList()